@@ -5,8 +5,20 @@ plugins {
 }
 
 group = 'com.example.java'
-version = '0.0.1-SNAPSHOT'
+version = '1.0.0'
 sourceCompatibility = '14'
+
+// <EnablePreview>
+tasks.withType(JavaCompile) {
+	options.compilerArgs += "--enable-preview"
+}
+tasks.withType(Test) {
+	jvmArgs += "--enable-preview"
+}
+tasks.withType(JavaExec) {
+	jvmArgs += "--enable-preview"
+}
+// </EnablePreview>
 
 configurations {
 	developmentOnly
